--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
- "TOKEN": "",
- "YOUTUBE_API_KEY": "",
+ "TOKEN": "yyyyyyyyyyyyyyyyyyyyy",
+ "YOUTUBE_API_KEY": "hghghggikdryreye0ghghghj",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 10,
   "PREFIX": "hossine",
